# djangocms-leaflet

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
assets/src/: leaflet.js
src/djangocms_leaflet/: __about__.py  apps.py  cms_plugins.py  models.py
src/djangocms_leaflet/locale/de/LC_MESSAGES/: django.mo  django.po
src/djangocms_leaflet/migrations/: 0001_initial.py  0002_auto_20200310_2328.py  0003_rename_name_map__name_remove_marker_name_and_more.py  0004_alter_map_set_marker.py
src/djangocms_leaflet/static/webpack/: leaflet.bundle.js
src/djangocms_leaflet/templates/djangocms_leaflet/: map.html  marker.html
tests/: __init__.py
