[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangocms-leaflet"
dynamic = ["version"]
description = 'django CMS plug-ins for the JavaScript map library Leaflet'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ['django CMS', 'Leaflet']
authors = [
  { name = "Jens-Erik Weber", email = "Jens-Erik.Weber@passiv.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Django>=3.2",
  "django-cms>=3.11",
  "requests>=2.31"
]

[project.urls]
Documentation = "https://github.com/MacLake/djangocms-leaflet#readme"
Issues = "https://github.com/MacLake/djangocms-leaflet/issues"
Source = "https://github.com/MacLake/djangocms-leaflet"

[tool.hatch.version]
path = "src/djangocms_leaflet/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
#  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/djangocms_leaflet tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.yapf]
based_on_style = "facebook"
SPLIT_BEFORE_BITWISE_OPERATOR = true
SPLIT_BEFORE_ARITHMETIC_OPERATOR = true
SPLIT_BEFORE_LOGICAL_OPERATOR = true
SPLIT_BEFORE_DOT = true

[tool.black]
target-version = ["py39"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
  "E",
  "F",
]
ignore = []
unfixable = [
  "F841",  # unused variable
]

[tool.ruff.lint.isort]
known-first-party = ["djangocms_leaflet"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"*/migrations/*" = ["E501"]  # Line too long

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.coverage.run]
source_pkgs = ["djangocms_leaflet", "tests"]
branch = true
parallel = true
omit = [
  "src/djangocms_leaflet/__about__.py",
]

[tool.coverage.paths]
djangocms_leaflet = ["src/djangocms_leaflet", "*/djangocms-leaflet/src/djangocms_leaflet"]
tests = ["tests", "*/djangocms-leaflet/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
